# anago

./: .gitignore  CMakeLists.txt  Makefile  anago.1  anago.1_src  anago.c  anago_en.txt  build_config.h.in  client_test.h  config.h  crc32.c  crc32.h  crctable.h  file.c  file.h  file.mak  flash_device.c  flash_device.h  flashdevice.nut  flashmemory.c  flashmemory.h  giveio.c  giveio.h  hard_dozeu.h  hard_hongkongfc.h  hard_onajimi.h  header.c  header.h  iodel.c  memory_manage.c  memory_manage.h  paralellport.h  progress.c  progress.h  reader_dozeu.h  reader_dummy.h  reader_hongkongfc.c  reader_hongkongfc.h  reader_kazzo.c  reader_kazzo.h  (+25 more)
anago/: Makefile  anago.c  anago_ja.txt  dumpcore.nut  flashcore.nut  porting.txt  progress.c  progress.h  reader_dummy.c  script_common.c  script_common.h  script_dump.c  script_dump.h  script_flash.c  squirrel_wrap.c
anago/kazzo/: kazzo_request.h
anago/scripts/: cnrom.ad  fme7.ad  mmc1_slrom.ad  mmc2.ad  mmc3.ad  mmc3_v2.ad  mmc4.ad  mmc5.ad  unrom_512.ad
debug/: debug.mak  unagi.d
kazzo/: kazzo_task.h
profile/: profile.mak
release/: release.mak
scripts/: anrom.ad  inlnsf.ad  mmc1_slrom.af  mmc1_surom.af  mmc3.af  mmc5.af  nrom.ad  unrom.ad  uorom.af  vrc4b.ad  vrc4b.af  vrc6b.af  vrc7.af
